[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Theme/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Menus/AlbumPicture.gd" type="Script" id=3]
[ext_resource path="res://Assets/Theme/DefaultFont6.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Theme/DefaultFont8.tres" type="DynamicFont" id=5]

[node name="AlbumPicture" type="ColorRect"]
margin_right = 96.0
margin_bottom = 80.0
rect_min_size = Vector2( 96, 80 )
theme = ExtResource( 2 )
color = Color( 0.678431, 0.466667, 0.341176, 1 )
script = ExtResource( 3 )

[node name="PictureTexture" type="TextureRect" parent="."]
anchor_left = 0.09375
anchor_top = 0.0729166
anchor_right = 0.927417
anchor_bottom = 0.572583
margin_right = -0.0320053
margin_bottom = 0.0319977
rect_min_size = Vector2( 80, 48 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LevelLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -23.0
margin_right = 46.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Sparse Forest"
align = 1

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -28.0
margin_top = -13.0
margin_right = 28.0
custom_fonts/font = ExtResource( 5 )
text = "10:15pm"
align = 1
